--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <div  *ngIf="!registerMode" style="text-align: center">
-  <h1>Fin your match!</h1>
+  <h1>Find your match!</h1>
   <p class="lead">Come on in to view your matches... All you need to do is sign up!</p>
   <div class="text-center">
     <button class="btn btn-primary btn-lg" (click)="registerToogle()">Register</button>
