--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,18 +1,19 @@
 <nav class="navbar navbar-default">
   <div class="container">
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false"
+        aria-controls="navbar">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" [routerLink]="['/home']" >Dating App</a>
+      <a class="navbar-brand" [routerLink]="['/home']">Dating App</a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav" *ngIf="loggedIn()">
         <li routerLinkActive="active">
-          <a [routerLink]="['/members']" >Matches</a>
+          <a [routerLink]="['/members']">Matches</a>
         </li>
         <li routerLinkActive="active">
           <a [routerLink]="['/lists']">Lists</a>
@@ -33,15 +34,27 @@
       </form>
 
       <ul *ngIf="loggedIn()" class="nav navbar-nav navbar-right">
+        <li>
+          <img src="{{photoUrl}}" alt="">
+        </li>
         <li class="dropdown" dropdown>
-          <a (click)="false" class="dropdown-toggle" dropdownToggle>Welcome {{authService.decodedToken?.unique_name | titlecase}}<span class="caret"></span></a>
+          <a (click)="false" class="dropdown-toggle" dropdownToggle>Welcome {{authService.decodedToken?.unique_name | titlecase}}
+            <span class="caret"></span>
+          </a>
           <ul class="dropdown-menu" *dropdownMenu>
-            <li><a [routerLink]="['/member/edit']" routerLinkActive="router-link-active" ><i class="fa fa-user"></i> Edit Profile</a></li>
+            <li>
+              <a [routerLink]="['/member/edit']" routerLinkActive="router-link-active">
+                <i class="fa fa-user"></i> Edit Profile</a>
+            </li>
             <li role="separator" class="divider"></li>
-            <li><a (click)="logout()"><i class="fa fa-sign-out"></i> Logout</a></li>
+            <li>
+              <a (click)="logout()">
+                <i class="fa fa-sign-out"></i> Logout</a>
+            </li>
           </ul>
         </li>
       </ul>
-    </div><!--/.navbar-collapse -->
+    </div>
+    <!--/.navbar-collapse -->
   </div>
 </nav>
